--- a/_posts/2022-10-12-mp.markdown
+++ b/_posts/2022-10-12-mp.markdown
@@ -3,7 +3,7 @@ layout:     post
 title:      "毕业总结"
 date:       2022-10-12
 author:     "Hux"
-catalog: false
+catalog: ture
 published: false
 header-style: text
 tags:
